# ROS-kinetic-tutorial-tech.IO

./: Dockerfile  README.md  techio.yml
markdowns/: welcome.md
markdowns/1-introduction/: introduction.md
markdowns/2-what-is-ROS/: what-is-ROS.md
markdowns/3-installation/: installation.md
markdowns/3-nodes/: nodes.md
markdowns/4-cli/: cli.md
markdowns/4-nodes/: nodes.md
markdowns/4-publisher/: publisher.md
markdowns/6-cli/: cli.md
markdowns/6-publisher/: publisher.md
markdowns/7-publisher/: publisher.md
ros-project/: CMakeLists.txt  install.bash  open_terminal.bash  open_terminal.py  run_publisher_tutorial.bash  run_turtlesim.bash  test.cpp
ros-project/6-cli/1-simple-cli/: open_terminal.bash
ros-project/7-publisher/: 1-run-publisher-example.bash  2-run-simple-publisher.bash  3-run-publisher-turtlesim-example.bash
ros-project/7-publisher/2-simple-publisher/src/: publisher_tutorial.cpp
ros-project/7-publisher/3-publisher-turtlesim-example/: CMakeLists.txt
ros-project/7-publisher/3-publisher-turtlesim-example/src/: turtlesim_tutorial.cpp
ros-project/publisher_tutorial/: CMakeLists.txt  package.xml
ros-project/publisher_tutorial/src/: publisher_tutorial.cpp
